--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,28 @@
   </head>
 
   <body>
-    <%= yield %>
+  <nav class="navbar navbar-inverse navbar-static-top" style="margin-bottom:0px">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a href="http://jhray.com" class="navbar-brand"><div style="color:aqua; display:inline">JHRay</div><div style="color:mediumpurple; display:inline">.com</div></a>
+            </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="http://jhray.com/chilled">Chilled E-Sports</a></li>
+                    <li><a href="#">Meme Driven Development</a></li>
+                    <li><a href="http://jhray.com/home/contact">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="container body-content">
+      <%= yield %>
+    </div>
   </body>
 </html>
