--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,8 @@
 <div class="body-bkg">
     <div class="container body-content index-body">
         <h1 class="body-header">Posts</h1>
-        <%= link_to("new post", [:new, :post]) %>
-        <table>
+        <%= link_to("new post", [:new, :post], class: "btn btn-primary") %>
+        <table class="table table-hover table-condensed">
             <thead>
                 <tr>
                     <th scope="col">PostNum</th>
@@ -21,7 +21,7 @@
                     <td><%= post.published? %></td>
                     <td><%= post.title %></td>
                     <td><%= post.subtitle %></td>
-                    <td><%= link_to("edit", [:edit, post]) %> <%= link_to("KILL", post, method: :delete, data: { confirm: "Are you sure you want to remove this post?" } ) %></td>
+                    <td><%= link_to("edit", [:edit, post], class: "btn btn-success") %> <%= link_to("KILL", post, method: :delete, data: { confirm: "Are you sure you want to remove this post?" }, class: "btn btn-warning") %></td>
                 </tr>
                 <% end %>
             </tbody>
