--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,30 +1,36 @@
 <div class="body-bkg">
     <div class="container body-content index-body">
-        <h1 class="body-header">Posts</h1>
-        <%= link_to("new post", [:new, :post], class: "btn btn-primary") %>
-        <table class="table table-hover table-condensed">
-            <thead>
-                <tr>
-                    <th scope="col">PostNum</th>
-                    <th scope="col">Published Date</th>
-                    <th scope="col">Is Published</th>
-                    <th scope="col">Title</th>
-                    <th scope="col">Subtitle</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                <% @posts.each do |post| %>
-                <tr>
-                    <td><%= post.id %></td>
-                    <td><%= post.publish_date %></td>
-                    <td><%= post.published? %></td>
-                    <td><%= post.title %></td>
-                    <td><%= post.subtitle %></td>
-                    <td><%= link_to("edit", [:edit, post], class: "btn btn-success") %> <%= link_to("KILL", post, method: :delete, data: { confirm: "Are you sure you want to remove this post?" }, class: "btn btn-warning") %></td>
-                </tr>
-                <% end %>
-            </tbody>
-        </table>
+        <div class="row">
+            <div class="col-lg-4">
+            </div>
+            <div class="col-lg-8 dusty">
+                <h1 class="body-header">Posts</h1>
+                <%= link_to("new post", [:new, :post], class: "btn btn-primary") %>
+                <table class="table table-hover table-condensed">
+                    <thead>
+                        <tr>
+                            <th scope="col">PostNum</th>
+                            <th scope="col">Published Date</th>
+                            <th scope="col">Is Published</th>
+                            <th scope="col">Title</th>
+                            <th scope="col">Subtitle</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <% @posts.each do |post| %>
+                        <tr>
+                            <td><%= post.id %></td>
+                            <td><%= post.publish_date %></td>
+                            <td><%= post.published? %></td>
+                            <td><%= post.title %></td>
+                            <td><%= post.subtitle %></td>
+                            <td><%= link_to("edit", [:edit, post], class: "btn btn-success") %> <%= link_to("KILL", post, method: :delete, data: { confirm: "Are you sure you want to remove this post?" }, class: "btn btn-warning") %></td>
+                        </tr>
+                        <% end %>
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
 </div>
