rails is a lightweight framework

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,10 @@
             </div>
         </div>
     </nav>
-    <%= yield %>
+    <div class="body-bkg">
+        <div class="container body-content index-body">
+            <%= yield %>
+        </div>
+    </div>
   </body>
 </html>
