--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -20,6 +20,7 @@
                 <li> Meme Post 5 </li>
             </ul>
             <a href="#">See all memes </a>
+            <%= link_to('Logout', destroy_user_session_path, method: :delete) %>
         </div>
     </div>
     <div class="col-sm-1 hidden-xs"></div>
