--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -28,5 +28,6 @@
                 <% end %>
             </tbody>
         </table>
+        <%= link_to('Logout', destroy_user_session_path, method: :delete) %>
     </div>
 </div>
