--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -3,7 +3,7 @@
     </div>
     <div class="col-lg-8 dusty">
         <h1 class="body-header">Posts</h1>
-        <%= link_to("new post", [:new, :post], class: "btn btn-primary") %>
+        <%= link_to("new post", [:new, :admin, :post], class: "btn btn-primary") %>
         <table class="table table-hover table-condensed">
             <thead>
                 <tr>
@@ -23,7 +23,7 @@
                     <td><%= post.published? %></td>
                     <td><%= post.title %></td>
                     <td><%= post.subtitle %></td>
-                    <td><%= link_to("edit", [:edit, post], class: "btn btn-success") %> <%= link_to("KILL", post, method: :delete, data: { confirm: "Are you sure you want to remove this post?" }, class: "btn btn-warning") %></td>
+                    <td><%= link_to("edit", [:edit, :admin, post], class: "btn btn-success") %> <%= link_to("KILL", [:admin, post], method: :delete, data: { confirm: "Are you sure you want to remove this post?" }, class: "btn btn-warning") %></td>
                 </tr>
                 <% end %>
             </tbody>
