--- a/app/views/admin/posts/new.html.erb
+++ b/app/views/admin/posts/new.html.erb
@@ -1,4 +1,4 @@
 <h1>New Post</h1>
-<%= form_for @post do |f| %>
+<%= form_for [:admin, @post] do |f| %>
 <%= render partial: "form", locals: { f: f } %>
 <% end %>
