--- a/app/views/memes/posts/index.html.erb
+++ b/app/views/memes/posts/index.html.erb
@@ -1,30 +1,29 @@
+
 <h1 class="body-header">Welcome to the Meme Cave</h1>
 <div class="row">
     <div class="col-sm-3 hidden-xs" style="height:100%; background-color:darkGray; height:600px;">
         <div style="">
             <h2> Memes Posted </h2>
-            <ul>
-                <li> Meme Post 1 </li>
-                <li> Meme Post 2 </li>
-                <li> Meme Post 3 </li>
-                <li> Meme Post 4 </li>
-                <li> Meme Post 5 </li>
+            <ul class="list-group">
+                <li class="list-group-item"> Meme Post 1 </li>
+                <li class="list-group-item"> Meme Post 2 </li>
+                <li class="list-group-item"> Meme Post 3 </li>
+                <li class="list-group-item"> Meme Post 4 </li>
+                <li class="list-group-item"> Meme Post 5 </li>
             </ul>
 
             <h2> Top Memes </h2>
-            <ul>
-                <li> Meme Post 1 </li>
-                <li> Meme Post 2 </li>
-                <li> Meme Post 3 </li>
-                <li> Meme Post 4 </li>
-                <li> Meme Post 5 </li>
+            <ul class="list-group">
+                <li class="list-group-item"> Meme Post 1 </li>
+                <li class="list-group-item"> Meme Post 2 </li>
+                <li class="list-group-item"> Meme Post 3 </li>
+                <li class="list-group-item"> Meme Post 4 </li>
+                <li class="list-group-item"> Meme Post 5 </li>
             </ul>
             <a href="#">See all memes </a>
-            <%= link_to('Logout', destroy_user_session_path, method: :delete) %>
         </div>
     </div>
-    <div class="col-sm-1 hidden-xs"></div>
-    <div class="col-sm-8 col-xs-12" style="height:100%">
+    <div class="col-sm-8 col-sm-offset-1 col-xs-12" style="height:100%">
         <div class="dusty short-meme">
         <h2>Post Title</h2>
         <h3>Subtitle</h3>
