--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a href="http://jhray.com/chilled">Chilled E-Sports</a></li>
-                    <li><a href="#">Meme Driven Development</a></li>
+                    <li><a href="http://jhray.com/memes">Meme Driven Development</a></li>
                     <li><a href="http://jhray.com/home/contact">Contact</a></li> 
                 </ul>
             </div>
