shifting stuff around

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,9 @@
 
-<h1 class="body-header">Welcome to the Meme Cave</h1>
 <div class="row">
-    <div class="col-sm-3 hidden-xs" style="height:100%; background-color:darkGray; height:600px;">
+    <div class="col-sm-3 hidden-xs" style="height:100%; background-color:darkGray;">
         <div style="">
+            <h1 class="body-header">Meme Driven Development</h1>
+            <p>A blog about life, love and software</p>
             <h2> Memes Posted </h2>
             <ul class="list-group">
                 <li class="list-group-item"> Meme Post 1 </li>
