--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -25,11 +25,35 @@
         </div>
     </div>
     <div class="col-sm-8 col-sm-offset-1 col-xs-12" style="height:100%">
+    <% @posts.each do |post| %>
         <div class="dusty short-meme">
-        <h2>Post Title</h2>
+        <h2><%= post.title %></h2>
+        <h3><%= post.subtitle %></h3>
+        <p>published : <% post.publish_date%></h2>
+        <%=  markdown = Redcarpet::Markdown.new(Redcarpet::Render::HTML.new(), extensions = {})
+        markdown.render(
+        %Q{### My List of Things To Do!
+
+  Here is the list of things I wish to do!
+
+  * write more posts
+  * write even more posts
+  * write even more posts!}).html_safe %>
+        </div>
+    <% end %>
+        <div class="dusty short-meme">
+        <h2>Title</h2>
         <h3>Subtitle</h3>
-        <p>publication date </h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mi purus, molestie eu mattis quis, sodales quis magna. Vivamus tempor, velit vitae hendrerit finibus, est justo auctor magna, nec elementum sapien ex vel enim. Aliquam iaculis ligula nec ante posuere finibus. Donec aliquet ipsum sed orci consectetur, sed hendrerit orci aliquet. Etiam sed sodales ante. Aliquam erat volutpat. Mauris ornare mauris tellus, sed blandit massa sodales et. Praesent nec purus tincidunt sem iaculis vulputate. Ut a viverra erat, ut congue metus. Pellentesque pulvinar diam eros, in semper metus placerat et. Quisque a felis facilisis, tempor sem vitae, ullamcorper urna. Ut risus tortor, laoreet a eleifend nec, aliquam sit amet felis. Nunc ullamcorper nibh eu arcu rhoncus gravida. Cras blandit pellentesque tincidunt. </p>
+        <p>published : Today!</h2>
+        <%=  markdown = Redcarpet::Markdown.new(Redcarpet::Render::HTML.new(), extensions = {})
+        markdown.render(
+        %Q{### My List of Things To Do!
+
+  Here is the list of things I wish to do!
+
+  * write more posts
+  * write even more posts
+  * write even more posts!}).html_safe %>
         </div>
     </div>
 </div>
