--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -28,7 +28,7 @@
         <% @posts.each do |post| %>
             <div class="dusty short-meme">
             <h2><%= post.title %> - <%= post.subtitle %></h2>
-            <p>published : <%= post.publish_date%></p>
+            <p><%= post.publish_date.strftime('%a %b %d %y') %></p>
             <%= post.content.html_safe %>
             </div>
         <% end %>
