--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -29,7 +29,7 @@
             <div class="dusty short-meme">
             <h2><%= post.title %> - <%= post.subtitle %></h2>
             <p><%= post.publish_date.strftime('%a %b %d %y') %></p>
-            <%= post.content.html_safe %>
+            <%= post.rendered_content %>
             </div>
         <% end %>
     </div>
