--- a/app/views/admin/posts/new.html.erb
+++ b/app/views/admin/posts/new.html.erb
@@ -1,4 +1,10 @@
-<h1>New Post</h1>
-<%= form_for [:admin, @post] do |f| %>
-<%= render partial: "form", locals: { f: f } %>
+<div class="container body-container">
+    <div class="row">
+        <div class="col-md-offset-7 col-md-5">
+            <h1>New Post</h1>
+        </div>
+    </div>
+    <%= form_for [:admin, @post] do |f| %>
+    <%= render partial: "form", locals: { f: f } %>
+</div>
 <% end %>
