--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -1,27 +1,27 @@
 <div class="row">
-    <div class="form-group col-md-3 col-md-offset-5">
+    <div class="form-group col-md-6 ">
         <%= f.label :title %>
         <%= f.text_field :title, class: 'form-control' %>
     </div>
-    <div class="form-group col-md-4">
+    <div class="form-group col-md-6">
         <%= f.label :subtitle %>
         <%= f.text_field :subtitle, class: 'form-control' %>  
     </div>
 </div>
 <div class="row">
-    <div class="form-group col-md-offset-5 col-md-7">
+    <div class="form-group  col-md-12">
         <%= f.label :publish_date %>
         <%= f.text_field :publish_date, class: 'form-control' %> 
     </div>
 </div>
 <div class="row">
-    <div class="form-group col-md-offset-5 col-md-7">
+    <div class="form-group  col-md-12">
         <%= f.label :content %>
         <%= f.text_area :content, rows: "15", class: 'form-control' %> 
     </div>
-<div class="checkbox col-md-offset-5 col-md-7">
+<div class="checkbox  col-md-12">
     <label><%= f.check_box :published %> Published </label>
 </div>
 <div class="row">
-    <%= f.submit "Submit Change", class:'btn btn-success col-md-offset-5 col-md-7' %>
+    <%= f.submit "Submit Change", class:'btn btn-success col-md-offset-1 col-md-10' %>
 </div>
