--- a/app/views/admin/posts/edit.html.erb
+++ b/app/views/admin/posts/edit.html.erb
@@ -1,4 +1,14 @@
-<h1>Edit Post</h1>
-<%= form_for [:admin, @post] do |f| %>
-<%= render partial: "form", locals: { f: f } %>
-<% end %>
+<div class="container body-container">
+    <div class="row">
+        <div class="col-md-offset-4 col-md-8 dusty">
+            <h1 style="text-align:center;">Edit Post</h1>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-offset-4 col-md-8 dusty" style="padding-bottom:16px;">
+            <%= form_for [:admin, @post] do |f|%>
+            <%= render partial: "form", locals: { f: f } %>
+            <% end %>
+        </div>
+    </div>
+</div>
