--- a/app/views/admin/posts/new.html.erb
+++ b/app/views/admin/posts/new.html.erb
@@ -1,10 +1,14 @@
 <div class="container body-container">
     <div class="row">
-        <div class="col-md-offset-7 col-md-5">
-            <h1>New Post</h1>
+        <div class="col-md-offset-4 col-md-8 dusty">
+            <h1 style="text-align:center;">New Post</h1>
         </div>
     </div>
-    <%= form_for [:admin, @post] do |f| %>
-    <%= render partial: "form", locals: { f: f } %>
+    <div class="row">
+        <div class="col-md-offset-4 col-md-8 dusty" style="padding-bottom:16px;">
+            <%= form_for [:admin, @post] do |f|%>
+            <%= render partial: "form", locals: { f: f } %>
+            <% end %>
+        </div>
+    </div>
 </div>
-<% end %>
