--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,7 +4,7 @@
         <div style="">
             <h1 class="body-header">Meme Driven Development</h1>
             <p>A blog about life, love and software</p>
-            <h2> Memes Posted </h2>
+            <h2> Top Memes </h2>
             <ul class="list-group">
                 <li class="list-group-item"> Meme Post 1 </li>
                 <li class="list-group-item"> Meme Post 2 </li>
@@ -13,7 +13,15 @@
                 <li class="list-group-item"> Meme Post 5 </li>
             </ul>
 
-            <h2> Top Memes </h2>
+            <h2> Recent Memes </h2>
+            <ul class="list-group">
+                <li class="list-group-item"> Meme Post 1 </li>
+                <li class="list-group-item"> Meme Post 2 </li>
+                <li class="list-group-item"> Meme Post 3 </li>
+                <li class="list-group-item"> Meme Post 4 </li>
+                <li class="list-group-item"> Meme Post 5 </li>
+            </ul>
+            <h2> Random Memes </h2>
             <ul class="list-group">
                 <li class="list-group-item"> Meme Post 1 </li>
                 <li class="list-group-item"> Meme Post 2 </li>
