--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -19,6 +19,7 @@
         <%= f.label :content %>
         <%= f.text_area :content, rows: "15", class: 'form-control' %> 
     </div>
+</div>
 <div class="checkbox  col-md-12">
     <label><%= f.check_box :published %> Published </label>
 </div>
