--- a/app/views/posts/_sideview.html.erb
+++ b/app/views/posts/_sideview.html.erb
@@ -5,29 +5,29 @@
 
         <h2> Top Memes </h2>
         <ul class="list-group">
-            <%= link_to '<li class="list-group-item"> Meme Post 1 </li>'.html_safe, post_path(side_view[0].id) %> 
-            <li class="list-group-item"> Meme Post 2 </li>
-            <li class="list-group-item"> Meme Post 3 </li>
-            <li class="list-group-item"> Meme Post 4 </li>
-            <li class="list-group-item"> Meme Post 5 </li>
+            <li class="post-list"> <%= link_to side_view[0].title, post_path(side_view[0].id) %> </li> 
+            <li class="post-list"> <%= link_to side_view[0].title, post_path(side_view[0].id) %> </li>
+            <li class="post-list"> <%= link_to side_view[0].title, post_path(side_view[0].id) %> </li>
+            <li class="post-list"> <%= link_to side_view[0].title, post_path(side_view[0].id) %> </li>
+            <li class="post-list"> <%= link_to side_view[0].title, post_path(side_view[0].id) %> </li>
         </ul>
 
         <h2> Recent Memes </h2>
         <ul class="list-group">
-            <li class="list-group-item"> Meme Post 1 </li>
-            <li class="list-group-item"> Meme Post 2 </li>
-            <li class="list-group-item"> Meme Post 3 </li>
-            <li class="list-group-item"> Meme Post 4 </li>
-            <li class="list-group-item"> Meme Post 5 </li>
+            <li class="post-list"> <%= link_to side_view[0].title, post_path(side_view[0].id) %> </li>
+            <li class="post-list"> <%= link_to side_view[0].title, post_path(side_view[0].id) %> </li>
+            <li class="post-list"> <%= link_to side_view[0].title, post_path(side_view[0].id) %> </li>
+            <li class="post-list"> <%= link_to side_view[0].title, post_path(side_view[0].id) %> </li>
+            <li class="post-list"> <%= link_to side_view[0].title, post_path(side_view[0].id) %> </li>
         </ul>
 
         <h2> Random Memes </h2>
         <ul class="list-group">
-            <li class="list-group-item"> Meme Post 1 </li>
-            <li class="list-group-item"> Meme Post 2 </li>
-            <li class="list-group-item"> Meme Post 3 </li>
-            <li class="list-group-item"> Meme Post 4 </li>
-            <li class="list-group-item"> Meme Post 5 </li>
+            <li class="post-list"> <%= link_to side_view[0].title, post_path(side_view[0].id) %> </li>
+            <li class="post-list"> <%= link_to side_view[0].title, post_path(side_view[0].id) %> </li>
+            <li class="post-list"> <%= link_to side_view[0].title, post_path(side_view[0].id) %> </li>
+            <li class="post-list"> <%= link_to side_view[0].title, post_path(side_view[0].id) %> </li>
+            <li class="post-list"> <%= link_to side_view[0].title, post_path(side_view[0].id) %> </li>
         </ul>
 
         <a href="#"> See all memes </a>
