--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,5 @@
 $text-color:antiquewhite;
-$link-color:darkMagenta;
+$link-color:rgb(224, 135, 224);
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "index";
