--- a/app/views/posts/_sideview.html.erb
+++ b/app/views/posts/_sideview.html.erb
@@ -1,4 +1,4 @@
-<div class="col-sm-3 hidden-xs" style="height:100%; background-color:darkGray;">
+<div class="col-sm-3 hidden-xs side-bar">
     <div>
         <h1 class="body-header"> Meme Driven Development </h1>
         <p> A blog about life, love and software </p>
