--- a/app/views/posts/_sideview.html.erb
+++ b/app/views/posts/_sideview.html.erb
@@ -23,11 +23,16 @@
 
         <h2> Random Memes </h2>
         <ul class="list-group">
-            <li class="post-list"> <%= link_to side_view[0].title, post_path(side_view[0].id) %> </li>
-            <li class="post-list"> <%= link_to side_view[1].title, post_path(side_view[1].id) %> </li>
-            <li class="post-list"> <%= link_to side_view[2].title, post_path(side_view[2].id) %> </li>
-            <li class="post-list"> <%= link_to side_view[3].title, post_path(side_view[3].id) %> </li>
-            <li class="post-list"> <%= link_to side_view[0].title, post_path(side_view[0].id) %> </li>
+            <% random_post = side_view.sample %>
+            <li class="post-list"> <%= link_to random_post.title, post_path(random_post.id) %> </li>
+            <% random_post = side_view.sample %>
+            <li class="post-list"> <%= link_to random_post.title, post_path(random_post.id) %> </li>
+            <% random_post = side_view.sample %>
+            <li class="post-list"> <%= link_to random_post.title, post_path(random_post.id) %> </li>
+            <% random_post = side_view.sample %>
+            <li class="post-list"> <%= link_to random_post.title, post_path(random_post.id) %> </li>
+            <% random_post = side_view.sample %>
+            <li class="post-list"> <%= link_to random_post.title, post_path(random_post.id) %> </li>
         </ul>
 
         <a href="#"> See all memes </a>
