top posts now works

--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -23,6 +23,9 @@
 <div class="checkbox  col-md-12">
     <label><%= f.check_box :published %> Published </label>
 </div>
+<div class="checkbox  col-md-12">
+    <label><%= f.check_box :top_post %> Top Post </label>
+</div>
 <div class="row">
     <%= f.submit "Submit Change", class:'btn btn-success col-md-offset-1 col-md-10' %>
 </div>
