removed turbolinks from top nav

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,13 +22,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="http://jhray.com" class="navbar-brand"><div style="color:aqua; display:inline">JHRay</div><div style="color:mediumpurple; display:inline">.com</div></a>
+                <a data-no-turbolink href="http://jhray.com" class="navbar-brand"><div style="color:aqua; display:inline">JHRay</div><div style="color:mediumpurple; display:inline">.com</div></a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="http://jhray.com/chilled">Chilled E-Sports</a></li>
+                    <li data-no-turbolink><a href="http://jhray.com/chilled">Chilled E-Sports</a></li>
                     <li><a href="http://jhray.com/memes">Meme Driven Development</a></li>
-                    <li><a href="http://jhray.com/home/contact">Contact</a></li> 
+                    <li data-no-turbolink><a href="http://jhray.com/home/contact">Contact</a></li> 
                 </ul>
             </div>
         </div>
